# CapApp

./: README.md
Test/: CMakeLists.txt  CMakeLists.txt.user.OhcvGD  Test.qmlproject  Test.qmlproject.qtds  qmlmodules  systemcontroller.cpp  systemcontroller.h
Test/content/: App.qml  Authentification.qml  CMakeLists.txt  Composant.qml  Details.qml  NonFTR.qml  PdfViewer.qml  Perimetre.qml  Quiz.qml  Synoptique.qml  Systeme.qml
Test/content/components/: BottomCompQuiz.qml  BottomComponent.qml  LeftComponent.qml  MainComponent.qml  NonFTRSolution.qml  QuizButton.qml  SynoptiqueButton.qml  TopComponent.qml  WindowHints.qml
Test/content/dialogBox/: DialogAddCsv.qml  DialogBoxAdd.qml  DialogBoxModify.qml  DialogBoxRe.qml
Test/imports/Test/: CMakeLists.txt  qmldir
Test/src/: composantcontroller.cpp  composantcontroller.h  detailscontroller.cpp  detailscontroller.h  imageprovider.cpp  imageprovider.h  import_qml_plugins.h  main.cpp  perimetrecontroller.cpp  perimetrecontroller.h  quizcontroller.cpp  quizcontroller.h  synoptiquecontroller.cpp  synoptiquecontroller.h  systemcontroller.cpp  systemcontroller.h
dataModels/: main.py
dataModels/config/: database.py
dataModels/models/: composants.py  csv.py  pdfs.py  perimetres.py  synoptiques.py  systems.py
dataModels/routes/: composantroute.py  csvroute.py  pdfsroute.py  route.py  synoptiqueroute.py  systemroute.py
dataModels/schema/: schemas.py
